--- a/app/src/main/res/layout/activity_handlerthread_2.xml
+++ b/app/src/main/res/layout/activity_handlerthread_2.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.open.learncode.android.threadhandler.ThreadHandlerActivity_2">
+    tools:context="com.open.learncode.android.handlerThread.HandlerThreadActivity_2">
 
     <TextView
         android:id="@+id/tv_info_count"
